[package]
name = "rust_external"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
argparse = "0.2.2"
min-max = "0.1"
num-traits = "0.2"
num-derive = "0.2"
# rust_lisp = { path = "vendor/rust_lisp", features = ["i64", "f64"]  }
lazy_static = "1.4.0"
memflow = { version = "^0.2.0-beta7", features = ["default"] }
memflow-qemu = "^0.2.0-beta"
log = { version = "^0.4.14", default-features = false }
env_logger = { version = "0.9.0" }
strfmt = { version = "0.2.2" }
hashbrown = "0.3"
csv = "1.1"
glam = "0.21.3"
